// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyleButton AcrylicButton 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderRadius": 32,
      "height": 64,
      "justifyContent": "center",
      "opacity": 1,
      "width": 64,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Object {
          "borderRadius": 32,
          "height": 64,
          "width": 64,
        },
        Object {
          "backgroundColor": "#FE7862",
          "overflow": "hidden",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "borderRadius": 32,
            "height": 64,
            "width": 64,
          },
          Object {
            "backgroundColor": "#FE7862",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            Object {
              "height": 19,
              "width": 19,
            },
            false,
            null,
          ]
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              undefined,
              false,
              Object {
                "flex": 0,
                "height": 19,
                "width": 19,
              },
            ]
          }
          vbHeight={1024}
          vbWidth={1024}
        >
          <RNSVGPath
            d="M512 0C794.760533 0 1024 229.239467 1024 512S794.760533 1024 512 1024 0 794.760533 0 512 229.239467 0 512 0z m185.048178 327.0656a26.988089 26.988089 0 0 0-38.183822 38.183822 207.712711 207.712711 0 1 1-293.728712 0 26.988089 26.988089 0 1 0-38.183822-38.183822c-102.172444 102.1952-102.172444 267.901156 0 370.096356 102.1952 102.172444 267.901156 102.172444 370.096356 0 102.172444-102.1952 102.172444-267.901156 0-370.096356zM511.886222 227.555556a27.079111 27.079111 0 0 0-26.919822 24.302933l-0.136533 2.776178v196.152889a27.079111 27.079111 0 0 0 53.998933 2.776177l0.136533-2.776177v-196.152889a27.079111 27.079111 0 0 0-27.079111-27.079111z"
            fill={
              Array [
                0,
                0,
                0,
                0,
                1,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            propList={
              Array [
                "stroke",
                "strokeWidth",
                "fill",
              ]
            }
            stroke={
              Array [
                0,
                0,
                0,
                0,
                1,
              ]
            }
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
          />
        </RNSVGSvgView>
      </View>
    </View>
    <BlurView
      blurAmount={1}
      blurType="light"
      overlayColor="transparent"
    />
  </View>
</View>
`;

exports[`StyleButton ClassicButton 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFF",
      "borderRadius": 14,
      "height": 92,
      "justifyContent": "center",
      "opacity": 1,
      "width": 120,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Object {
          "borderRadius": 24,
          "height": 48,
          "width": 48,
        },
        Object {
          "backgroundColor": "transparent",
          "overflow": "hidden",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "borderRadius": 24,
            "height": 48,
            "width": 48,
          },
          Object {
            "backgroundColor": "transparent",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
            },
            Object {
              "height": 48,
              "width": 48,
            },
            false,
            null,
          ]
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              undefined,
              false,
              Object {
                "flex": 0,
                "height": 48,
                "width": 48,
              },
            ]
          }
          vbHeight={1024}
          vbWidth={1024}
        >
          <RNSVGPath
            d="M512 0C794.760533 0 1024 229.239467 1024 512S794.760533 1024 512 1024 0 794.760533 0 512 229.239467 0 512 0z m185.048178 327.0656a26.988089 26.988089 0 0 0-38.183822 38.183822 207.712711 207.712711 0 1 1-293.728712 0 26.988089 26.988089 0 1 0-38.183822-38.183822c-102.172444 102.1952-102.172444 267.901156 0 370.096356 102.1952 102.172444 267.901156 102.172444 370.096356 0 102.172444-102.1952 102.172444-267.901156 0-370.096356zM511.886222 227.555556a27.079111 27.079111 0 0 0-26.919822 24.302933l-0.136533 2.776178v196.152889a27.079111 27.079111 0 0 0 53.998933 2.776177l0.136533-2.776177v-196.152889a27.079111 27.079111 0 0 0-27.079111-27.079111z"
            fill={
              Array [
                0,
                0.08235294117647059,
                0.5490196078431373,
                0.984313725490196,
                1,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            propList={
              Array [
                "stroke",
                "strokeWidth",
                "fill",
              ]
            }
            stroke={
              Array [
                0,
                0.08235294117647059,
                0.5490196078431373,
                0.984313725490196,
                1,
              ]
            }
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
          />
        </RNSVGSvgView>
      </View>
    </View>
  </View>
  <Text
    accessible={true}
    align={null}
    allowFontScaling={false}
    color="rgba(61, 61, 61, 0.5)"
    ellipsizeMode="tail"
    size={10}
    style={
      Array [
        false,
        Array [
          false,
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "rgba(61, 61, 61, 0.5)",
              "fontSize": 10,
              "fontWeight": "400",
            },
            Array [
              Object {
                "marginTop": 8,
              },
              undefined,
            ],
          ],
        ],
      ]
    }
    type={null}
    weight="400"
  >
    开关
  </Text>
</View>
`;

exports[`StyleButton NordicButton 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderRadius": 12,
      "height": 64,
      "justifyContent": "center",
      "opacity": 1,
      "width": 64,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#ff0",
        "height": 25,
        "width": 25,
      }
    }
  />
</View>
`;

exports[`StyleButton PaintButton 1`] = `
<PaintButton
  icon="M512 0C794.760533 0 1024 229.239467 1024 512S794.760533 1024 512 1024 0 794.760533 0 512 229.239467 0 512 0z m185.048178 327.0656a26.988089 26.988089 0 0 0-38.183822 38.183822 207.712711 207.712711 0 1 1-293.728712 0 26.988089 26.988089 0 1 0-38.183822-38.183822c-102.172444 102.1952-102.172444 267.901156 0 370.096356 102.1952 102.172444 267.901156 102.172444 370.096356 0 102.172444-102.1952 102.172444-267.901156 0-370.096356zM511.886222 227.555556a27.079111 27.079111 0 0 0-26.919822 24.302933l-0.136533 2.776178v196.152889a27.079111 27.079111 0 0 0 53.998933 2.776177l0.136533-2.776177v-196.152889a27.079111 27.079111 0 0 0-27.079111-27.079111z"
  onLongPress={[Function]}
>
  <StyleButton
    backgroundColor="#FFF"
    blurAmount={1}
    disabled={false}
    fontColor="#162236"
    fontSize={12}
    fontWeight="400"
    height={108}
    icon="M512 0C794.760533 0 1024 229.239467 1024 512S794.760533 1024 512 1024 0 794.760533 0 512 229.239467 0 512 0z m185.048178 327.0656a26.988089 26.988089 0 0 0-38.183822 38.183822 207.712711 207.712711 0 1 1-293.728712 0 26.988089 26.988089 0 1 0-38.183822-38.183822c-102.172444 102.1952-102.172444 267.901156 0 370.096356 102.1952 102.172444 267.901156 102.172444 370.096356 0 102.172444-102.1952 102.172444-267.901156 0-370.096356zM511.886222 227.555556a27.079111 27.079111 0 0 0-26.919822 24.302933l-0.136533 2.776178v196.152889a27.079111 27.079111 0 0 0 53.998933 2.776177l0.136533-2.776177v-196.152889a27.079111 27.079111 0 0 0-27.079111-27.079111z"
    iconBgColor="#76A6E4"
    iconBgRadius={12}
    iconBgSize={48}
    iconSize={20}
    isSupportAcrylic={false}
    milliseconds={200}
    onLongPress={[Function]}
    overlayColor="transparent"
    radius={12}
    width={164}
  >
    <TouchableOpacity
      activeOpacity={0.8}
      disabled={false}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "#FFF",
            "borderRadius": 12,
            "height": 108,
            "width": 164,
          },
          undefined,
        ]
      }
    >
      <AnimatedComponent
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Object {
                "backgroundColor": "#FFF",
                "borderRadius": 12,
                "height": 108,
                "width": 164,
              },
              undefined,
            ],
            Object {
              "opacity": 1,
            },
          ]
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFF",
              "borderRadius": 12,
              "height": 108,
              "justifyContent": "center",
              "opacity": 1,
              "width": 164,
            }
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFF",
                "borderRadius": 12,
                "height": 108,
                "justifyContent": "center",
                "opacity": 1,
                "width": 164,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  Object {
                    "borderRadius": 12,
                    "height": 48,
                    "width": 48,
                  },
                  Object {
                    "backgroundColor": "#76A6E4",
                    "overflow": "hidden",
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Object {
                      "borderRadius": 12,
                      "height": 48,
                      "width": 48,
                    },
                    Object {
                      "backgroundColor": "#76A6E4",
                      "overflow": "hidden",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Object {
                        "borderRadius": 12,
                        "height": 48,
                        "width": 48,
                      },
                      Object {
                        "backgroundColor": "#76A6E4",
                      },
                      undefined,
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "justifyContent": "center",
                        },
                        Object {
                          "borderRadius": 12,
                          "height": 48,
                          "width": 48,
                        },
                        Object {
                          "backgroundColor": "#76A6E4",
                        },
                        undefined,
                      ]
                    }
                  >
                    <Component
                      d="M512 0C794.760533 0 1024 229.239467 1024 512S794.760533 1024 512 1024 0 794.760533 0 512 229.239467 0 512 0z m185.048178 327.0656a26.988089 26.988089 0 0 0-38.183822 38.183822 207.712711 207.712711 0 1 1-293.728712 0 26.988089 26.988089 0 1 0-38.183822-38.183822c-102.172444 102.1952-102.172444 267.901156 0 370.096356 102.1952 102.172444 267.901156 102.172444 370.096356 0 102.172444-102.1952 102.172444-267.901156 0-370.096356zM511.886222 227.555556a27.079111 27.079111 0 0 0-26.919822 24.302933l-0.136533 2.776178v196.152889a27.079111 27.079111 0 0 0 53.998933 2.776177l0.136533-2.776177v-196.152889a27.079111 27.079111 0 0 0-27.079111-27.079111z"
                      size={20}
                    >
                      <IconFont
                        color="#000"
                        d="M512 0C794.760533 0 1024 229.239467 1024 512S794.760533 1024 512 1024 0 794.760533 0 512 229.239467 0 512 0z m185.048178 327.0656a26.988089 26.988089 0 0 0-38.183822 38.183822 207.712711 207.712711 0 1 1-293.728712 0 26.988089 26.988089 0 1 0-38.183822-38.183822c-102.172444 102.1952-102.172444 267.901156 0 370.096356 102.1952 102.172444 267.901156 102.172444 370.096356 0 102.172444-102.1952 102.172444-267.901156 0-370.096356zM511.886222 227.555556a27.079111 27.079111 0 0 0-26.919822 24.302933l-0.136533 2.776178v196.152889a27.079111 27.079111 0 0 0 53.998933 2.776177l0.136533-2.776177v-196.152889a27.079111 27.079111 0 0 0-27.079111-27.079111z"
                        fill={null}
                        hFlip={false}
                        height={null}
                        name={null}
                        size={20}
                        stroke={null}
                        strokeCap="round"
                        strokeDash={
                          Array [
                            0,
                            0,
                          ]
                        }
                        strokeJoin="round"
                        strokeWidth={1}
                        style={null}
                        vFlip={false}
                        viewBox="0 0 1024 1024"
                        width={null}
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "flexDirection": "row",
                              },
                              Object {
                                "height": 20,
                                "width": 20,
                              },
                              false,
                              null,
                            ]
                          }
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "flexDirection": "row",
                                },
                                Object {
                                  "height": 20,
                                  "width": 20,
                                },
                                false,
                                null,
                              ]
                            }
                          >
                            <Svg
                              height={20}
                              key="0"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 1024 1024"
                              width={20}
                            >
                              <_class
                                align="xMidYMid"
                                meetOrSlice={0}
                                minX={0}
                                minY={0}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "transparent",
                                    },
                                    undefined,
                                    false,
                                    Object {
                                      "flex": 0,
                                      "height": 20,
                                      "width": 20,
                                    },
                                  ]
                                }
                                vbHeight={1024}
                                vbWidth={1024}
                              >
                                <RNSVGSvgView
                                  align="xMidYMid"
                                  meetOrSlice={0}
                                  minX={0}
                                  minY={0}
                                  style={
                                    Array [
                                      Object {
                                        "backgroundColor": "transparent",
                                      },
                                      undefined,
                                      false,
                                      Object {
                                        "flex": 0,
                                        "height": 20,
                                        "width": 20,
                                      },
                                    ]
                                  }
                                  vbHeight={1024}
                                  vbWidth={1024}
                                >
                                  <Path
                                    d="M512 0C794.760533 0 1024 229.239467 1024 512S794.760533 1024 512 1024 0 794.760533 0 512 229.239467 0 512 0z m185.048178 327.0656a26.988089 26.988089 0 0 0-38.183822 38.183822 207.712711 207.712711 0 1 1-293.728712 0 26.988089 26.988089 0 1 0-38.183822-38.183822c-102.172444 102.1952-102.172444 267.901156 0 370.096356 102.1952 102.172444 267.901156 102.172444 370.096356 0 102.172444-102.1952 102.172444-267.901156 0-370.096356zM511.886222 227.555556a27.079111 27.079111 0 0 0-26.919822 24.302933l-0.136533 2.776178v196.152889a27.079111 27.079111 0 0 0 53.998933 2.776177l0.136533-2.776177v-196.152889a27.079111 27.079111 0 0 0-27.079111-27.079111z"
                                    fill="#000"
                                    height={null}
                                    stroke="#000"
                                    strokeCap="round"
                                    strokeDash={
                                      Array [
                                        0,
                                        0,
                                      ]
                                    }
                                    strokeJoin="round"
                                    strokeWidth={1}
                                    width={null}
                                  >
                                    <RNSVGPath
                                      d="M512 0C794.760533 0 1024 229.239467 1024 512S794.760533 1024 512 1024 0 794.760533 0 512 229.239467 0 512 0z m185.048178 327.0656a26.988089 26.988089 0 0 0-38.183822 38.183822 207.712711 207.712711 0 1 1-293.728712 0 26.988089 26.988089 0 1 0-38.183822-38.183822c-102.172444 102.1952-102.172444 267.901156 0 370.096356 102.1952 102.172444 267.901156 102.172444 370.096356 0 102.172444-102.1952 102.172444-267.901156 0-370.096356zM511.886222 227.555556a27.079111 27.079111 0 0 0-26.919822 24.302933l-0.136533 2.776178v196.152889a27.079111 27.079111 0 0 0 53.998933 2.776177l0.136533-2.776177v-196.152889a27.079111 27.079111 0 0 0-27.079111-27.079111z"
                                      fill={
                                        Array [
                                          0,
                                          0,
                                          0,
                                          0,
                                          1,
                                        ]
                                      }
                                      fillOpacity={1}
                                      fillRule={1}
                                      matrix={
                                        Array [
                                          1,
                                          0,
                                          0,
                                          1,
                                          0,
                                          0,
                                        ]
                                      }
                                      opacity={1}
                                      propList={
                                        Array [
                                          "stroke",
                                          "strokeWidth",
                                          "fill",
                                        ]
                                      }
                                      stroke={
                                        Array [
                                          0,
                                          0,
                                          0,
                                          0,
                                          1,
                                        ]
                                      }
                                      strokeDasharray={null}
                                      strokeDashoffset={null}
                                      strokeLinecap={0}
                                      strokeLinejoin={0}
                                      strokeMiterlimit={4}
                                      strokeOpacity={1}
                                      strokeWidth={1}
                                    />
                                  </Path>
                                </RNSVGSvgView>
                              </_class>
                            </Svg>
                          </View>
                        </View>
                      </IconFont>
                    </Component>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </AnimatedComponent>
    </TouchableOpacity>
  </StyleButton>
</PaintButton>
`;
